# tectonic

./: .gitignore  CARGO_README.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cargo_publish_log.txt  job_log.txt  publish_jxoesneon.py  publish_manual.sh
.agent/workflows/: release-workflow.md
.cargo/: audit.toml
.github/: FUNDING.yml  dependabot.yml
.github/actions/build-and-test/: action.yml
.github/workflows/: build_and_test.yml  codeql.yml  deploy.yml  main_workflow.yml  prep.yml  stellar-ci.yml
crates/bridge_core/: Cargo.toml  README.md
crates/bridge_core/src/: lib.rs
crates/bridge_core/support/: support.c  tectonic_bridge_core.h  tectonic_bridge_core_generated.h
crates/bridge_flate/: Cargo.toml  README.md
crates/bridge_fontconfig/: Cargo.toml  README.md
crates/bridge_freetype2/: Cargo.toml  README.md
crates/bridge_freetype2/src/: lib.rs
crates/bridge_graphite2/: Cargo.toml  README.md
crates/bridge_harfbuzz/: Cargo.toml  README.md
crates/bridge_harfbuzz/src/: lib.rs
crates/bridge_icu/: Cargo.toml  README.md
crates/bridge_png/: Cargo.toml  README.md
crates/bundles/: Cargo.toml  README.md
crates/bundles/src/: lib.rs  ttb_net.rs
crates/cfg_support/: Cargo.toml  README.md
crates/dep_support/: Cargo.toml  README.md
crates/docmodel/: Cargo.toml  README.md
crates/docmodel/src/: document.rs
crates/engine_bibtex/: Cargo.toml  README.md
crates/engine_spx2html/: Cargo.toml  README.md
crates/engine_spx2html/src/: emission.rs
crates/engine_xdvipdfmx/: Cargo.toml  README.md
crates/engine_xetex/: Cargo.toml  README.md  build.rs
crates/engine_xetex/xetex/: xetex-xetex0.c
crates/errors/: Cargo.toml  README.md
crates/errors/src/: lib.rs
crates/geturl/: Cargo.toml  README.md
crates/io_base/: Cargo.toml  README.md
crates/mac_core/: Cargo.toml  README.md
crates/pdf_io/: Cargo.toml  README.md
crates/pdf_io/pdf_io/: dpx-cmap.c  dpx-dpxcrypt.c  dpx-pdfobj.c
crates/status_base/: Cargo.toml  README.md
crates/xdv/: Cargo.toml  README.md
crates/xetex_format/: Cargo.toml  README.md
crates/xetex_format/src/: commands.rs  format.rs  symbols.rs
crates/xetex_layout/: Cargo.toml  README.md  build.rs
crates/xetex_layout/src/manager/: fc.rs
src/: config.rs  docmodel.rs  driver.rs  errors.rs  lib.rs
tests/: cli_hardening.rs  tex-outputs.rs
tests/bundle_env_overrides_test/: Cargo.toml
tests/tex-outputs/: stress_expand.tex  stress_expand.xdv
