lints.workspace = true

[package]
name = "jxoesneon-tectonic-bridge_png"
version = "0.16.2"
edition = "2021"
links = "png"

[build-dependencies]
jxoesneon-tectonic-dep_support = { path = "../dep_support", version = "0.16.2"  }

[package.metadata.internal_dep_versions]
tectonic_dep_support = "5faf4205bdd3d31101b749fc32857dd746f9e5bc"
