# Copyright 2019-2020 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_cfg_support"
description = "Internal crate for the Tectonic project: tectonic_cfg_support"
version = "0.17.2"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "^1.4"
