# Copyright 2020 the Tectonic Project
# Licensed under the MIT License.

lints.workspace = true

[package]
name = "tectonic_errors"
description = "Internal crate for the Tectonic project: tectonic_errors"
version = "0.17.2"  # assigned with cranko (see README)
authors = ["Peter Williams <peter@newton.cx>"]
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_errors"
repository = "https://github.com/tectonic-typesetting/tectonic/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "^1"
