lints.workspace = true

[package]
name = "jxoesneon-tectonic-mac_core"
license = "MIT"
description = "Core constants and headers for Tectonic on macOS"
homepage = "https://tectonic-typesetting.github.io/"
documentation = "https://docs.rs/tectonic_mac_core"
repository = "https://github.com/tectonic-typesetting/tectonic/"
version = "0.17.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
jxoesneon-tectonic-cfg_support = { path = "../cfg_support", version = "0.17.0"  }

[package.metadata.internal_dep_versions]
tectonic_cfg_support = "thiscommit:aeRoo7oa"
