lints.workspace = true

[package]
name = "jxoesneon-tectonic-mac_core"
license = "MIT"
version = "0.17.1"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
tectonic_cfg_support = { package = "jxoesneon-tectonic-cfg_support", path = "../cfg_support", version = "0.17.1"  }

[package.metadata.internal_dep_versions]
tectonic_cfg_support = "thiscommit:aeRoo7oa"
